Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
-    <title>Frontend Mentor | Age calculator app | by Rau (raubaca)</title>
+    <title>Frontend Mentor | Age calculator app | by Gabriel Antunes Rocha</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
