--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Age calculator app challenge designed by Frontend Mentor, coded by Rau (raubaca)"
+      content="Age calculator app challenge designed by Frontend Mentor, coded by Gabriel Antunes Rocha"
     />
     <link
       rel="icon"
